order/order-service/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      hostAliases:
      - ip: "10.10.112.28"
        hostnames:
        - "api-test.got.co.th"
      containers:
      - name: order
        image: gulcht/order-service:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: order
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
